BZR-94 refactored /space/{spaceId}/users GET, added cache and external api calling
