# src/main/kotlin/org/bazar/space/controller/SpaceController.kt
@@ -2,33 +2,26 @@ package org.bazar.space.controller
 
 import org.bazar.space.api.SpaceControllerApi
 import org.bazar.space.model.GetSpacesResponse
-import org.bazar.space.service.SpaceManager
-import org.bazar.space.util.exceptions.ApiException
-import org.bazar.space.util.exceptions.ApiExceptions
+import org.bazar.space.model.GetUsersInSpaceResponse
+import org.bazar.space.service.SpaceApiService
 import org.bazar.space.util.getAuthenticatedUserIdOrThrow
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.PathVariable
 import org.springframework.web.bind.annotation.RestController
-import java.util.*
 
 @RestController
 class SpaceController(
-    private val spaceManager: SpaceManager
+    private val spaceApiService: SpaceApiService,
 ) : SpaceControllerApi {
 
     override fun getAllSpaces(): ResponseEntity<GetSpacesResponse> {
-        val response = spaceManager.getAllSpacesByUserId(getAuthenticatedUserIdOrThrow())
+        val response = spaceApiService.getAllSpacesByUserId(getAuthenticatedUserIdOrThrow())
         return ResponseEntity.ok(response)
     }
 
-    override fun getAllUsersInSpace(@PathVariable spaceId: Long): ResponseEntity<List<UUID>> {
-        val response = spaceManager.getAllUsersInSpace(spaceId)
-
-        if (!response.contains(getAuthenticatedUserIdOrThrow()))
-            throw ApiException(ApiExceptions.FORBIDDEN)
-
+    override fun getAllUsersInSpaceEnriched(@PathVariable spaceId: Long): ResponseEntity<GetUsersInSpaceResponse> {
+        val response = spaceApiService.getAllUsersInSpaceEnriched(spaceId)
         return ResponseEntity.ok(response)
     }
-
 
 }
